--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
 
 <body>
      <div id="app"></div>
-<script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="scripts.min.js"></script></body>
+<script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="scripts.js"></script></body>
 
 </html>
